--- a/bookyourshow/src/components/Navbar.css
+++ b/bookyourshow/src/components/Navbar.css
@@ -55,7 +55,7 @@ overflow: hidden;
 .right button {
   width: 80px;
   height: 27px;
-  background-color: rgb(252, 58, 91);
+  background-color: #fc3a5b;
   color: white;
   border: none;
   border-radius: 4px;
@@ -87,8 +87,12 @@ overflow: hidden;
 .s-left {
   display: flex;
 }
-.s-left p {
+.s-left a {
+  color: white;
   margin-inline: 15px;
+}
+.s-left a:hover{
+  color: rgb(252, 87, 114);
 }
 .s-right p {
   margin-inline: 15px;
