--- a/bookyourshow/src/style/allcss.css
+++ b/bookyourshow/src/style/allcss.css
@@ -2,4 +2,46 @@
 font-family: Arial, Helvetica, sans-serif;
     margin: 0;
     padding: 0;
+    text-decoration: none;
+}
+/* movie css */
+
+.content{
+    display: flex;
+    gap: 15px;
+    padding: 5px;
+    margin-left: 10%;
+    width: 80%;
+    height: 400px;
+}
+.leftcontent{
+
+width: 30%;
+padding: 5px;
+display: flex;
+flex-direction: column;
+gap: 10px;
+
+}
+.options{
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+
+}
+.options .opt1,.opt2,.opt3{
+    padding: 10px;
+    border: 1px solid black;
+}
+.options button{
+    padding: 10px;
+    border: 1px solid #fc3a5b;
+    color: #fc3a5b;
+    background-color: white;
+    border-radius: 5px;
+}
+.rightcontent{
+    background-color: blue;
+    height: 200px;
+    width: 200px;
 }
