--- a/bookyourshow/src/style/Home.css
+++ b/bookyourshow/src/style/Home.css
@@ -1,49 +1,154 @@
 .slider-container {
-display: flex;
-flex-direction: column;
-
+  display: flex;
+  flex-direction: column;
   overflow: hidden;
-  display: block;
-  width: 100% ;/* Adjust based on your needs */
- 
-
+  width: 100%; /* Adjust based on your needs */
 }
+
 .slider-container img {
   width: 100%;
-  height: 70vh;
- /* object-fit: cover; Ensures the image covers the entire slide area */
-
+  height: 50vh;
 }
-.up{
-    
-  display: flex;
 
+.slider {
+  overflow: hidden;
+}
+
+.up {
+  display: flex;
+  padding: 0 8vh;
   justify-content: space-between;
 }
-.container a{
-  color:rgb(220, 53, 88);
+
+.container p {
+  color: rgb(220, 53, 88);
   font-weight: 500;
-  padding-right: 8vh;
-  padding-top: 32px;
-  text-decoration: none;
+ padding: 10px 10vh;
+  cursor: pointer;
+}
+
+.container {
+  padding: 5vh 10vh;
 }
 
 .container h2 {
-  font: 24px Roboto;
-  padding-left: 10vh;
-   padding-top: 30px;
-   padding-bottom: 7px;
+  font-size: 24px;
+  padding-left: 8vh;
+  padding-bottom: 10px;
   font-weight: 900;
   color: #333333;
 }
+
 .container .card {
   display: flex;
   justify-content: center;
   flex-direction: row;
   flex-wrap: wrap;
 }
+
 .card img {
-  width: 17%;
-  margin-inline: 15px;
+  width: 14%;
+  margin-inline: 20px;
   border-radius: 10px;
+}
+
+.premiere {
+  background-color: rgb(43, 49, 72);
+  margin-top: 40px;
+  padding: 1vh 10vh;
+  color: white;
+  align-items: start;
+}
+
+.premiere h2 {
+  padding: 1vh 10vh;
+  font-weight: 900;
+}
+
+.containers .up p {
+  color: rgb(197, 72, 72);
+  cursor: pointer;
+ text-align:right;
+}
+
+.premiere p {
+  padding: 1vh 18vh;
+}
+
+.premiere .card {
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+/* Responsive Styling */
+@media (max-width: 1200px) {
+  .container, .premiere {
+    padding: 5vh 5vh;
+  }
+
+  .container h2, .premiere h2 {
+    padding-left: 5vh;
+  }
+
+  .container p {
+    padding-right: 5vh;
+  }
+
+  .premiere p {
+    padding: 1vh 10vh;
+  }
+}
+
+@media (max-width: 768px) {
+  .up {
+    padding: 0 5vh;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .container, .premiere {
+    padding: 3vh 3vh;
+  }
+
+  .container h2, .premiere h2 {
+    padding-left: 3vh;
+  }
+
+  .container p {
+    padding-right: 3vh;
+  }
+
+  .premiere p {
+    padding: 1vh 5vh;
+  }
+
+  .card img {
+    width: 30%;
+    margin-inline: 10px;
+  }
+}
+
+@media (max-width: 480px) {
+  .container, .premiere {
+    padding: 2vh 2vh;
+  }
+
+  .container h2, .premiere h2 {
+    padding-left: 2vh;
+  }
+
+  .container p {
+    padding-right: 2vh;
+  }
+
+  .premiere p {
+    padding: 1vh 2vh;
+  }
+
+  .card img {
+    width: 45%;
+    margin-inline: 5px;
+  }
 }
