--- a/bookyourshow/src/style/allcss.css
+++ b/bookyourshow/src/style/allcss.css
@@ -5,6 +5,20 @@ font-family: Arial, Helvetica, sans-serif;
     text-decoration: none;
 }
 /* movie css */
+.slider{
+    overflow: hidden;
+}
+.slider-container {
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+    width: 100%; /* Adjust based on your needs */
+  }
+  
+  .slider-container img {
+    width: 100%;
+    height: 50vh;
+  }
 
 .content{
     display: flex;
