--- a/bookyourshow/src/style/Home.css
+++ b/bookyourshow/src/style/Home.css
@@ -34,13 +34,13 @@
 }
 
 .container {
-  padding: 0vh 10vh;
+  padding: 5vh 10vh;
 }
 
 .container h2 {
   font-size: 24px;
   padding-left: 8vh;
-  padding-bottom: 0px;
+  padding-bottom: 5px;
   font-weight: 900;
   color: #333333;
 }
@@ -52,9 +52,8 @@
   flex-wrap: wrap;
 
 }
-
 .card img {
-  width: 14%;
+  width: 200px;
   margin-inline: 20px;
   border-radius: 10px;
 }
