--- a/bookyourshow/src/style/Corporate.css
+++ b/bookyourshow/src/style/Corporate.css
@@ -1,231 +1,287 @@
 .App {
-    text-align: center;
-    font-family: Arial, sans-serif;
+  text-align: center;
+  font-family: Arial, sans-serif;
+  background-color: #f5f5f5;
 }
 
 .header {
-    color: white;
-    padding: 10px 30px;
-    position: relative;
-    width: 100%;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
+  color: white;
+  padding: 10px 30px;
+  position: relative;
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
 .header::before {
-    position: absolute;
-    top: 0;
-    left: 0;
-    content: "";
-    width: 100%;
-    height: 100%;
-    background-image: url("https://assets-in.bmscdn.com/webin/corporate/corp-banner-bg.jpg");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    filter: brightness(0.4);
-    /* z-index: -1;  */
+  position: absolute;
+  top: 0;
+  left: 0;
+  content: "";
+  width: 100%;
+  height: 100%;
+  background-image: url("https://assets-in.bmscdn.com/webin/corporate/corp-banner-bg.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  filter: brightness(0.4);
+  /* z-index: -1;  */
 }
 
 .header-content {
-    max-width: 500px;
-    z-index: 2;
-    padding: 20px;
+  max-width: 500px;
+  z-index: 2;
+  padding: 20px;
 }
 
 .header h3 {
-    font-size: 2.5em;
-    margin-bottom: 20px;
+  font-size: 2.5em;
+  margin-bottom: 20px;
 }
 
 .header p {
-    font-size: 20px;
-    line-height: 30px;
-    color: white;
-    text-align: center;
+  font-size: 20px;
+  line-height: 30px;
+  color: white;
+  text-align: center;
 }
 
 .header-buttons {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    align-items: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  align-items: center;
 }
 
 .header-buttons button {
-    margin-right: 10px;
-    padding: 10px 20px;
-    font-size: 1em;
-    border: none;
-    cursor: pointer;
+  margin-right: 10px;
+  padding: 10px 20px;
+  font-size: 1em;
+  border: none;
+  cursor: pointer;
 }
 
 .callback-form {
-    position: relative;
-    z-index: 1;
-    text-align: left;
-    color: black;
-    top: 20%;
-    right: 10%;
-    width: 20%;
-    background: white;
-    padding: 15px 25px;
-    border-radius: 8px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  position: relative;
+  z-index: 1;
+  text-align: left;
+  color: black;
+  top: 20%;
+  right: 10%;
+  width: 20%;
+  background: white;
+  padding: 15px 25px;
+  border-radius: 8px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
 
 .callback-form form {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .callback-form label {
-    margin-bottom: 5px;
-    font-weight: bold;
+  margin-bottom: 5px;
+  font-weight: bold;
 }
 
 .callback-form input {
-    margin-bottom: 15px;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
+  margin-bottom: 15px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
 }
 
 .callback-form button {
-    padding: 10px;
-    background-color: grey;
-    color: white;
-    border: none;
-    cursor: not-allowed;
+  padding: 10px;
+  background-color: grey;
+  color: white;
+  border: none;
+  cursor: not-allowed;
 }
 
 .partners-section {
-    padding: 40px 20px;
+  padding: 40px 20px;
 }
-.partners-logos{
-    background-color: aliceblue;
+.partners-logos {
+  background-color: aliceblue;
 
-display: flex;
-padding: 20px;
-align-items: center;
-justify-content: center;
+  display: flex;
+  padding: 20px;
+  align-items: center;
+  justify-content: center;
 }
 .partners-logos img {
-    
-    margin: 0 40px;
-    height: 50px;
+  margin: 0 40px;
+  height: 50px;
 }
 
 .statistics {
-    display: flex;
-    justify-content: space-around;
-  padding: 10vh ;
+  display: flex;
+  justify-content: space-around;
+  padding: 10vh;
 }
 .section {
-          display: flex;
-          text-align: left;
-          justify-content: space-between;
-          max-width: 1200px;
-          margin: 0 auto;
-        
-          border: 1px solid #e0e0e0;
-          border-radius: 8px;
-          background-color: #fff;
-        }
-        .section img {
-          width: 40%;
-          height: auto;
-          border-radius: 8px;
-        }
-        .section-content {
-            padding: 40px 60px;
-          width: 55%;
-        }
-        .section-content h1 {
-            margin-top: 20px;
-          margin-bottom: 30px;
-        }
-        .section-content p {
-                font-size: 18px;
-    font-weight: 400;
-    line-height: 28px;
-    color: rgb(51, 51, 51);
-           padding-bottom: 25px;
-           margin-bottom: 20px;
-        }
-        .section-content button {
-          padding: 10px 20px;
-         border: 1px solid #DC3558;
-          color:#DC3558;
-          border-radius: 4px;
-          cursor: pointer;
-        }
+  display: flex;
+  text-align: left;
+  justify-content: space-between;
+  max-width: 1200px;
+  margin: 0 auto;
+
+  border: 1px solid #e0e0e0;
+  border-radius: 8px;
+  background-color: #fff;
+}
+.section img {
+  width: 40%;
+  height: auto;
+  border-radius: 8px;
+}
+.section-content {
+  padding: 40px 60px;
+  width: 55%;
+}
+.section-content h1 {
+  margin-top: 20px;
+  margin-bottom: 30px;
+}
+.section-content p {
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 28px;
+  color: rgb(51, 51, 51);
+  padding-bottom: 25px;
+  margin-bottom: 20px;
+}
+.section-content button {
+  padding: 10px 20px;
+  border: 1px solid #dc3558;
+  color: #dc3558;
+  border-radius: 4px;
+  cursor: pointer;
+}
 
 .statistics div {
-    text-align: center;
+  text-align: center;
 }
 
 .statistics h3 {
-    font-size: 1.5em;
-    color: #333;
+  font-size: 1.5em;
+  color: #333;
 }
+.business-solutions {
+     padding: 5vh 22vh;
+  text-align: center;
+ 
+
+}
+
+.partners-section h2 {
+  margin-bottom: 30px;
+  margin-top: 40px;
+  font-weight: 600;
+}
+
+.solutions-container {
+  
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 25px;
+}
+
+.solution-card {
+    height: 30vh;
+  width: 30%;
+  padding: 40px 20px;
+  color: white;
+  border-radius: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.cta-section {
+     background-color: #fff;
+     align-items: center;
+   
+     height: 10vh;
+ width: 100%;
+ margin: 0 auto;
+  justify-content: space-between;
+  display: flex;
+  margin-top: 20px;
+}
+
+.cta-button {
+    height: 100%;
+  background-color: #f44336;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 4px;
+  cursor: pointer;
+  font-weight: 600;
+}
+
+.cta-button:hover {
+  background-color: #d32f2f;
+}
+
 
 /* Media Queries for Responsiveness */
 @media (max-width: 873px) {
-    .header {
-        flex-direction: column;
-      
-        padding: 10px 20px;
-    }
+  .header {
+    flex-direction: column;
 
-   
+    padding: 10px 20px;
+  }
 
-    .header h3 {
-        font-size: 2em;
-    }
+  .header h3 {
+    font-size: 2em;
+  }
 
-    .header p {
-        font-size: 18px;
-    }
+  .header p {
+    font-size: 18px;
+  }
 
-    .callback-form {
-        margin-right:10vh;
-        width: 50%;
-        right: 0;
-        left: 10%;
-        top: 10%;
-    }
+  .callback-form {
+    margin-right: 10vh;
+    width: 50%;
+    right: 0;
+    left: 10%;
+    top: 10%;
+  }
 
-    .statistics {
-        flex-direction: column;
-        align-items: center;
-    }
+  .statistics {
+    flex-direction: column;
+    align-items: center;
+  }
 
-    .partners-logos img {
-        margin: 10px;
-    }
+  .partners-logos img {
+    margin: 10px;
+  }
 }
 
 @media (max-width: 509px) {
-    .header h3 {
-        font-size: 1.5em;
-    }
+  .header h3 {
+    font-size: 1.5em;
+  }
 
-    .header p {
-        font-size: 16px;
-    }
+  .header p {
+    font-size: 16px;
+  }
 
-    .callback-form {
-        width: 50%;
-      
-    }
+  .callback-form {
+    width: 50%;
+  }
 
-    .header-buttons button {
-        font-size: 0.9em;
-        padding: 8px 15px;
-    }
+  .header-buttons button {
+    font-size: 0.9em;
+    padding: 8px 15px;
+  }
 }
