--- a/bookyourshow/src/style/allcss.css
+++ b/bookyourshow/src/style/allcss.css
@@ -213,7 +213,7 @@
 }
 
 /* Popup content */
-.popup-overlay {
+.popup-overlay1 {
   position: fixed;
   top: 0;
   left: 0;
@@ -225,7 +225,7 @@
   justify-content: center;
   z-index: 1000; /* Make sure this is higher than your slider */
 }
-.popup-content {
+.popup-content1 {
   text-align: center;
   box-shadow: 0 0 10px rgba(55, 52, 52, 0.1);
   background: white;
