--- a/bookyourshow/src/components/Navbar.css
+++ b/bookyourshow/src/components/Navbar.css
@@ -151,10 +151,10 @@ overflow: hidden;
 }
 
 .left input {
-  padding: 5px;
+  padding: 15px;
   width: 90%;
   background: none;
-   font-size: 16px;
+   font-size: 18px;
   border: none;
 
 }
@@ -166,9 +166,11 @@ overflow: hidden;
   flex-wrap: wrap; /* Allows wrapping on smaller screens */
 }
 
-.right button {
-  width: 80px;
-  height: 27px;
+.right .btnsignin {
+  width: 15vh;
+    padding: 5px;
+  height: 5vh;
+   font-size: 20px;
   background-color: #fc3a5b;
   color: white;
   border: none;
@@ -176,9 +178,20 @@ overflow: hidden;
   margin-inline: 10px;
 }
 
-.right i, .right p {
+.right i {
   font-size: 15px;
   margin-inline: 10px;
+}
+.navbar-location{
+  text-align: center;
+  width: 14vh;
+  height: 4vh;
+  padding: 5px;
+    border-radius: 5px;
+   background-color: #fc3a5b;
+  cursor: pointer;
+  margin-inline: 20px;
+  font-size: 20px;
 }
 
 .sec-nav {
