--- a/bookyourshow/src/style/allcss.css
+++ b/bookyourshow/src/style/allcss.css
@@ -243,11 +243,13 @@
 /* Close button */
 .close-btn {
   position: absolute;
-  top: 17px;
-  right: 10px;
-  background: none;
+  background-color:#dc3558;
+  top: 27px;
+  width: 40px;
+  color: #f5f5f5;
+  right: 15px;
   border: none;
-  font-size: 24px;
+  font-size: 26px;
   cursor: pointer;
   z-index: 1002;
 }
