--- a/bookyourshow/src/components/Listyourshow.css
+++ b/bookyourshow/src/components/Listyourshow.css
@@ -10,7 +10,7 @@
   margin-bottom: 50px;
 }
 
-h2 {
+.host-section .services-section h2 {
       color: rgb(31, 37, 58);
     font-size: 48px;
     line-height: 56px;
@@ -75,3 +75,4 @@ h2 {
 .list-show-button:hover {
   background-color: #d9534f;
 }
+
